# redes-obl1-part2

xmlrpc_redes/: README.md  pyproject.toml
xmlrpc_redes/xmlrpc_redes/: operations.py  utils.py
